--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -16,6 +16,9 @@
         right: 0px;
         z-index: 5;
     }
+    html,body{
+      overflow-x: hidden;
+    }
     .navbar{
         display:grid;
         grid-template-columns: 40% 10% 50%;
@@ -51,7 +54,6 @@
         font-size: 16px;
         padding-top: 0px;
     }
-
     #logo{
     width: 250px;
     padding-left: 10px;
